src/objects/fferpcore__ProcessTracking__c.object
<CustomObject>
    <fields>
        <fullName>fferpcore__MessageData__c</fullName>
        <description>Data collected from the process responses received, which is to be forwarded with the completion message.</description>
        <inlineHelpText>Data collected from the process responses received, which is to be forwarded with the completion message.</inlineHelpText>
        <label>Message Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__OutstandingResponses__c</fullName>
        <description>The number of responses waiting to be received.</description>
        <inlineHelpText>The number of responses waiting to be received.</inlineHelpText>
        <label>Outstanding Responses</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__ProcessToken__c</fullName>
        <description>Token used to validate messages associated with this process tracking record.</description>
        <inlineHelpText>Token used to validate messages associated with this process tracking record.</inlineHelpText>
        <label>Process Token</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Process Tracking</label>
    <nameField>
        <label>ProcessState Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>